# khpi-programming

./: readme.md
lab1/: CMakeLists.txt  task1.c  task2.c
lab2/: CMakeLists.txt  ex1.c  ex2.c  task1.c
lab3/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  task1.c
lab4/: CMakeLists.txt  ex1.c  main.c  task1.c  task2.c
prac1/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  task1.c  task2.c
prac2/: CMakeLists.txt  ex1.c  ex2.c  ex2_1.c  ex2_2.c  task1.c
prac3/: CMakeLists.txt  ex1.c  ex2.c  task1.c  task2.c
prac4/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex4.c  task1.c
