cmake_minimum_required(VERSION 3.20)
project(lab3 C)

set(CMAKE_C_STANDARD 99)

#add_executable(lab3 ex1.c)
#add_executable(lab3 ex2.c)
#add_executable(lab3 ex3.c)
#add_executable(lab3 ex4.c)
#add_executable(lab3 ex5.c)
#add_executable(lab3 ex6.c)
#add_executable(lab3 ex7.c)
#add_executable(lab3 ex8.c)
#add_executable(lab3 ex9.c)

add_executable(lab3 task1.c)